# hookshot

./: .gitignore  README.md  hookshot.yml  pyproject.toml
.github/workflows/: lint.yml  tests.yml
docs/: README.md
docs/examples/: gate-and-if.yml  gate-single-if.yml  minimal-hooks.yml  worktrees-with-load.yml
docs/explanation/: architecture.md
docs/how-to/: concurrent-webhooks.md  debug-hook-not-firing.md  gate-on-markers.md  gh-webhook-forward.md  inspect-state.md  rotate-secrets.md  run-agent-from-hook.md  tune-timeouts.md  use-worktrees-per-issue.md
docs/reference/: cli.md  configuration.md  defaults.md  events.md  gh-forward-supervisor.md  http.md  reactions.md  state.md  templates-and-filters.md  worktrees.md
docs/tutorials/: getting-started.md  webhook-forward.md
hookshot/: __main__.py  matcher.py  runner.py  server.py
src/hookshot/: __init__.py  __main__.py  config.py  matcher.py  reactions.py  runner.py  server.py  state.py  templates.py  worktree.py
tests/: test_config.py  test_docs_examples.py  test_docs_layout.py  test_matcher.py  test_reactions.py  test_runner.py  test_server.py  test_state.py  test_templates.py  test_worktree.py
